--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_gallery">Elementos guardados</string>
+    <string name="menu_slideshow">Tus publicaciones</string>
     <string name="todo2">TODO</string>
     <string name="username">Username</string>
     <string name="type">Type</string>
