Avance en la activity de crear post, aún queda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="inicio">Inicio</string>
     <string name="elementos_guardados">Elementos guardados</string>
     <string name="tus_publicaciones">Tus publicaciones</string>
+    <string name="todo6">TODO</string>
 </resources>
