--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string-array name="valoresSpinner">
+        <item name="play">Jugada</item>
         <item name="object">Objeto encontrado</item>
         <item name="boss">Jefe derrotado</item>
         <item name="easteregg">Secreto encontrado</item>
@@ -7,13 +8,13 @@
         <item name="other">Otro</item>
     </string-array>
 
-    <string name="app_name">trophyemall</string>
+    <string name="app_name">Trophy em All</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">Configuración (WIP)</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Elementos guardados</string>
