Finalización de la funcionalidad, añadida base de datos en Firestore y que los post se suban ahí, falta arreglar bug de mostrar imagen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="elementos_guardados">Elementos guardados</string>
     <string name="tus_publicaciones">Tus publicaciones</string>
     <string name="todo6">TODO</string>
+    <string name="en_desarrollo_disculpen_las_molestias">(EN DESARROLLO, DISCULPEN LAS MOLESTIAS)</string>
 </resources>
